argocd/applications/remikeat.com/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: remikeat-com
  namespace: "remikeat-com"
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: remikeat.com
  type: ClusterIP
